<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LoopingLouie Extreme</string>

    <!--  MainMenuFragment -->
    <string name="btn_server">Host game</string>
    <string name="btn_client">Connect</string>

    <!--  HostGameFragment -->
    <string name="tv_title_host_game">Host a game</string>

    <!--  ConnectFragment -->
    <string name="tv_title_connect">Connect to a game</string>

    <!--  SettingsFragment -->
    <string name="tv_title_settings">Settings</string>

    <!--  DeviceListActivity -->
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices…</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select device</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="other_devices">Other Devices</string>
    <string name="btn_scan">Scan</string>

    <!-- Wheel Of Fortune Texts -->
    <string name="wof_winner_1">Spin again!</string>
    <string name="wof_winner_2">Determine 1 drinker!</string>
    <string name="wof_winner_3">Determine 2 drinker!</string>
    <string name="wof_winner_4">Everybody must drink!</string>
    <string name="wof_winner_5">The player to your right must drink!</string>
    <string name="wof_winner_6">Determine 1 drinker!</string>
    <string name="wof_loser_1">Spin again!</string>
    <string name="wof_loser_2">Drink 1!</string>
    <string name="wof_loser_3">Drink 2!</string>
    <string name="wof_loser_4">Drink 3!</string>
    <string name="wof_loser_5">Drink with a partner!</string>
    <string name="wof_loser_6">Drink 1!</string>

    <string name="tv_title_custom_game_settings">Custom Game Settings</string>
    <string name="tv_player_settings_title">Player Settings</string>
    <string name="wof_winner_7">Spin again!</string>
    <string name="wof_winner_8">Determine 1 drinker!</string>
    <string name="wof_winner_9">Drink 1!</string>
    <string name="wof_winner_10">All except you must drink!</string>
    <string name="wof_winner_11">The player to your left must drink!</string>
    <string name="wof_winner_12">Determine 1 drinker!</string>
    <string name="wof_loser_7">Spin again!</string>
    <string name="wof_loser_8">Drink 1!</string>
    <string name="wof_loser_9">Determine 1 drinker!</string>
    <string name="wof_loser_10">Lucky you!</string>
    <string name="wof_loser_11">Drink 2!</string>
    <string name="wof_loser_12">Drink 1!</string>
    <string name="wof_spinning" tools:ignore="Typos">dum die dum …</string>
    <string name="wof_spin_the_wheel">Spin the wheel!</string>
    <string name="wof_wait_for_other_player">Wait for other players …</string>
    <string name="error" translatable="false">ERROR</string>
    <string name="dialog_enter_profile_name">Enter a profile name:</string>
    <string name="player_results_title">Player results</string>
    <string name="game_settings_title">Game settings</string>
    <string name="wof_title">The Wheel of Fortune</string>
    <string name="player_profiles_title">Player profiles</string>
    <string name="achievements_title">Achievements</string>
    <string name="main_menu_logged_in_as">User:</string>
    <string name="statistics_title">Statistics</string>
    <string name="game_round">Round %1$d / %2$d</string>
    <string name="player_results_time">Game Time: %1$02d:%2$02d</string>
    <string name="game_settings_rounds">Rounds:</string>
    <string name="settings_enable_debug">Enable Debug Mode</string>
    <string name="host_game_board_connection">Board connection:</string>
    <string name="player_settings_players">Players:</string>
    <string name="btn_achievements_statistics">Statistics</string>
    <string name="statistics_rounds_played">Rounds played:</string>
    <string name="statistics_games_played">Games played:</string>
    <string name="statistics_rounds_won">Rounds won:</string>
    <string name="statistics_games_won">Games won:</string>
    <string name="settings_disable_bluetooth">Disable bluetooth when exiting the app</string>
    <string name="listitem_player_profile_achievements">Achievements:</string>
    <string name="game_settings_enable_wof">enable the Wheel of Fortune</string>
    <string name="game_settings_enable_loser_wheel">enable loser Wheel of Fortune</string>
    <string name="game_settings_classic">Classic</string>
    <string name="game_settings_action">Action</string>
    <string name="game_settings_custom">Custom</string>
    <string name="custom_game_settings_speed_settings">Speed settings</string>
    <string name="custom_game_settings_start_speed">Start Speed</string>
    <string name="custom_game_settings_random_speed">Random Speed</string>
    <string name="custom_game_settings_speed_min_delay">Speed Min Delay</string>
    <string name="custom_game_settings_speed_max_delay">Speed Max Delay</string>
    <string name="custom_game_settings_speed_min_step_size">Speed Min Step Size</string>
    <string name="custom_game_settings_speed_max_step_size">Speed Max Step Size</string>
    <string name="custom_game_settings_enable_reverse">Enable Reverse</string>
    <string name="custom_game_settings_chef_mode">Chef Mode</string>
    <string name="custom_game_settings_chef_roulette">Chef Roulette</string>
    <string name="custom_game_settings_change_chef_delay">Change Chef Delay</string>
    <string name="custom_game_settings_chef_shorter_cooldown">Chef Shorter Cooldown</string>
    <string name="custom_game_settings_enable_items">Enable Items</string>
    <string name="custom_game_settings_enable_events">Enable Events</string>
    <string name="btn_custom_game_settings_ok">OK</string>
    <string name="btn_player_settings_start">Start</string>
    <string name="player_settings_player_name">Player Name:</string>
    <string name="player_settings_item_black" translatable="false">Black</string>
    <string name="player_settings_item_reverse" translatable="false">Reverse</string>
    <string name="player_settings_item_slow" translatable="false">Slow</string>
    <string name="player_settings_item_turbo" translatable="false">Turbo</string>
    <string name="player_settings_slot_close">Close</string>
    <string name="player_settings_slot_local">Local</string>
    <string name="player_settings_slot_open">Open</string>
    <string name="btn_connect_connect">connect</string>
    <string name="btn_wof_next_round">Next Round</string>
    <string name="host_game_connected_players">Connected Players:</string>
    <string name="btn_game_results_wof">Wheel of Fortune</string>
    <string name="btn_host_game_game_settings">Game Settings</string>
    <string name="btn_host_game_scan">Scan for board</string>
    <string name="btn_game_settings_player_settings">Player Settings</string>
    <string name="btn_settings_test_wheel">test wheel</string>
    <string name="btn_settings_wipe_files">wipe files</string>
    <string name="main_menu_version" translatable="false">Version: %1$s</string>
    <string name="listitem_player_achievements_progress" translatable="false">%1$d / %2$d %3$s</string>
    <string name="listitem_player_settings_open_slot">Open Slot</string>
    <string name="listitem_player_settings_disabled_player">Disabled Player</string>
    <string name="switch_text_on">ON</string>
    <string name="switch_text_off">OFF</string>
    <string name="dialog_user_name_hint">Enter a name for your new player profile</string>
    <string name="toast_close_attempt">Tap again to end the fun</string>
    <string name="dialog_request_kick">Do you really want to kick the player?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="custom_game_settings_speed_max">Max Speed</string>
    <string name="custom_game_settings_speed_min">Min Speed</string>
    <string name="tv_player_name">Player name:</string>
    <string name="tv_booster">Booster:</string>
    <string name="ach_finish_1_round_title">And the addiction begins</string>
    <string name="ach_finish_1_round_descr_unlock">rounds finished</string>
    <string name="ach_finish_1_round_descr_unlocked">You have finished a round</string>
    <string name="ach_finish_5_rounds_title">Play 5 rounds</string>
    <string name="ach_finish_5_rounds_descr_unlocked">You have finished 5 rounds</string>
    <string name="ach_finish_5_rounds_descr_unlock">rounds finished</string>
    <string name="ach_finish_1_game_title">Play a game</string>
    <string name="ach_finish_1_game_descr_unlocked">You have finished a whole game</string>
    <string name="ach_finish_1_game_desr_unlock">games finished</string>
    <string name="ach_finish_5_games_title">Play 5 games</string>
    <string name="ach_finish_5_games_descr_unlocked">You have finished 5 games</string>
    <string name="ach_finish_5_games_descr_unlock">games finished</string>
    <string name="ach_win_1_round_title">Win a round</string>
    <string name="ach_win_1_round_descr_unlocked">You have won a round</string>
    <string name="ach_win_1_round_descr_unlock">rounds won</string>
    <string name="ach_win_5_rounds_title">Win 5 rounds</string>
    <string name="ach_win_5_rounds_descr_unlocked">You have won 5 rounds</string>
    <string name="ach_win_5_rounds_descr_unlock">rounds won</string>
    <string name="ach_win_1_game_title">Win a game</string>
    <string name="ach_win_1_game_descr_unlocked">You have won a whole game</string>
    <string name="ach_win_1_game_descr_unlock">games won</string>
    <string name="ach_win_5_games_title">Win 5 games</string>
    <string name="ach_win_5_games_descr_unlocked">You have won 5 games</string>
    <string name="ach_win_5_games_descr_unlock">games won</string>
    <string name="host_game_no_players">no connected players</string>
    <string name="host_game_no_boards">no boards found</string>
    <string name="game_settings_effetcs">Effects:</string>
    <string name="game_settings_game_mode">Gamemode:</string>

</resources>
