<de.renekolb.loopinglouieextreme.CustomViews.RelativeLayoutAnimate xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.renekolb.loopinglouieextreme.ui.HostGameFragment"
    android:background="@color/setting_fragments"
    android:padding="15dp"
    android:clickable="true">

    <TextView
        android:id="@+id/tv_host_game_title"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/tv_title_host_game"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="#0000b3"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_host_game_board_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tv_host_game_title"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/host_game_board_connection" />

    <LinearLayout
        android:id="@+id/ll_host_game_upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_host_game_board_connection"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp">

        <ImageButton
        android:id="@+id/btn_host_game_make_visible"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        style="@style/btnDefault"
        android:src="@drawable/ic_visibility"
        android:scaleType="fitCenter"
        android:padding="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

        <ProgressBar
            android:id="@+id/pb_host_game_scanning_board"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            style="@android:style/Widget.ProgressBar.Small"
            android:visibility="invisible" />


        <ListView
            android:id="@+id/lv_host_game_board_devices"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>



    <TextView
        android:id="@+id/tv_host_game_connected_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_host_game_upper"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="19dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/host_game_connected_players" />

    <ListView
        android:id="@+id/lv_host_game_clients"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@id/tv_host_game_connected_devices"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:background="#b3f0ff"
        android:divider="#000000"/>


    <Button
        android:id="@+id/btn_host_game_game_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip"
        android:layout_marginBottom="4dip"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        style="@style/btnSelect"
        android:text="@string/btn_host_game_game_settings"


    <Button
        android:id="@+id/btn_host_game_le_scan"
        android:layout_width="wrap_content"
        android:layout_height="42dip"
        android:layout_marginTop="2dip"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="4dip"
        android:layout_alignParentBottom="true"
        style="@style/btnSelect"
        android:text="@string/btn_host_game_scan" />

</de.renekolb.loopinglouieextreme.CustomViews.RelativeLayoutAnimate>
